SOOOOO FACKING CLOSE

--- a/sections/Design/TnTDesign/TurretDesign.tex
+++ b/sections/Design/TnTDesign/TurretDesign.tex
@@ -81,8 +81,8 @@ The piston-design was chosen for the final cannon design, as it is able to
 shoot up to the required range of 200cm, and is able to fire up to 6
 consecutive shots. In addition, the tests conducted in \autoref{SensorTest} also
 showed that the sensors on the turret are incapable of sensing the target any
-further than ~200cm. Due to this fact, the increased range of the other
-designs were considerably less meaningful when choosing a
+further than $\sim$ 200cm. Due to this fact, the increased range of the
+other designs were considerably less meaningful when choosing a
 design.\nl
 
 The precision of the piston-design was tested in \autoref{AppendixAccTest}, and
@@ -96,13 +96,13 @@ the conclusion are shown below:
   4cm at 4 degrees, and up to 20cm at 40 degrees.
 \end{itemize}
 
-In these conclusions, the spread indicates, that on average, the turret missed
-the intended location with that amount of centimeters.\nl
+In these conclusions, the spread indicates the average deviation from the
+intended location.\nl
 
 This test shows that the turret is fairly accurate, but it does
-have a considerable chance of misfiring or shooting sligthly too far. While the problem
-with misfires are not easily solvable, the problem with shooting too far or too
-wide can possibly be solved by increasing the size of the target.
+have a considerable chance of misfiring or shooting slightly too far. While the
+problem with misfires are not easily solvable, the problem with shooting too far
+and too wide can possibly be solved by increasing the size of the target.
 
 % The final design of the turret has the cannon mounted on a motor that is used to
 % control its vertical angle. This way it is able to angle itself in order to
