--- a/sections/Design/BNDesig/DomainsAndProbs.tex
+++ b/sections/Design/BNDesig/DomainsAndProbs.tex
@@ -189,7 +189,11 @@ the target is moving.
 
 \subsection{Using the Network}
 In order to present the model in action, we can create a concrete example of the
-model determining the direction/speed of the target.\nl
+model determining the direction/speed of the target. We need to assume that the
+probability in each column of each conditional probability table sum to 1. In
+the example below this is done by adding a chance for the vectors to change at
+the [60-75] interval. This will help to illustrate the problem with a lack
+of data.\nl
 
 The turret starts its operation by looking straight ahead while waiting for the
 target to appear. The target enters the turret's field of vision, and the turret
@@ -204,19 +208,19 @@ based on our test-data, which is presented in \autoref{AppendixMIData}. For
 probabilities:
 
 \begin{itemize}
-  \item 57cm/s - 78.57\% chance.
-  \item 41cm/s - 14.86\% chance.
-  \item Bad Observation - 6.57\% chance.
+  \item 41 cm/s - 0\% chance.
+  \item 57cm/s speed - 50.14\% chance.
+  \item Bad Observation - 49.86\% chance.
 \end{itemize}
 
 In this case, the model would conclude that \texttt{Vector\_1} would be most
-likely to have the target moving at a speed of 57cm/s. Now, given the same
+likely to have the target moving at 41 cm/s. Now, given the same
 information, the model would assign \texttt{Vector\_2} the following probabilities:
 
 \begin{itemize}
-  \item 57cm/s - 24.84\% chance.
-  \item 41cm/s - 55.00\% chance.
-  \item Bad Observation - 20.16\% chance.
+  \item 41 cm/s - 32.35\% chance.
+  \item 57 cm/s - 18.11\% chance.
+  \item Bad Observation - 49.55\% chance.
 \end{itemize}
 
 The probability for \texttt{Vector\_2} indicates that the most likely conclusion
