- Added BricxCC to lib

--- a/bib/lib.bib
+++ b/bib/lib.bib
@@ -20,6 +20,12 @@
   url={http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=259423}
 }
 
+@Misc{BricxCC,
+  title={{Bricx Command Center}},
+  note={seen 16/12/2016},
+  howpublished={\url{http://bricxcc.sourceforge.net/}}
+}
+
 @book{OrbitBA,
   title={Orbit BA},
   author={Morten Brydensholt, Tommy Gjøe, Jens Ingwersen, Claus Jessen, Ole Keller, Jan Møller, Jens Vaaben},
